ya estan las dos barras de navegacion, la negra ya se pega al top

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,3 +3,13 @@
     margin: 0;
     padding: 0;
 } */
+
+/* Este es para que la barra negra se quede en top despues del scroll */
+.stick-bar{
+    position: sticky;
+    top: 0;
+}
+/* Tamaño barra negra */
+.black_bar_size{
+    /* height: 10vh !important; */
+}
