--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -21,6 +21,9 @@ body{
 .side-menu ul{
     margin: 8px 0 0 0;
     list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
 }
 
 .side-menu a:hover{
