contenido centrado, en movil se ve incompleto el mapa

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,10 +4,15 @@
     padding: 0;
 } */
 
+body{
+    font-family: 'Kumbh Sans', sans-serif;
+}
+
 /* Este es para que la barra negra se quede en top despues del scroll */
 .stick-bar{
     position: sticky;
     top: 0;
+    /* z-index: 1; */
 }
 /* Tamaño barra negra */
 .black_bar_size{
